# arrax

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ai/: OVERALL_DESIGN.md  memory.md
.ai/plans/: MILESTONE_1.md  MILESTONE_1_1.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_5.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh
examples/: dot_product.py  elementwise.py  matmul.py  rmsnorm.py  softmax.py
firmware/harness/: Makefile  linker.ld  main.c.template
llvm-npu/: IntrinsicsRISCVXnpu.td  README.md  RISCVInstrInfoXnpu.td  build-llvm.sh
llvm-npu/tests/: run_tests.sh  test_reductions.ll  test_scalar_ops.ll  test_vector_ops.ll
src/arrax/: __init__.py  pipeline.py
src/arrax/codegen/: asm_emitter.py  build.py  firmware_harness.py  llvm_emitter.py
src/arrax/dialects/: array_dialect.py  npu_dialect.py
src/arrax/dsl/: array.py  tracer.py
src/arrax/lowering/: array_to_linalg.py  buffer_optimize.py  bufferize.py  dsl_to_array.py  fusion.py  linalg_to_npu.py  npu_canonicalize.py  npu_to_asm.py  tile.py  (+2 more)
tests/: helpers.py  test_benchmarks.py  test_dialects.py  test_dsl.py  test_end_to_end.py  test_lowering.py
tests/codegen/: test_asm_emitter.py  test_llvm_emitter.py  test_llvm_parity.py
tests/dialects/: test_array_dialect.py  test_npu_dialect.py
tests/dsl/: test_array.py  test_reductions_terminal.py  test_tracer.py
tests/lowering/: test_array_to_linalg.py  test_buffer_optimize.py  test_bufferize.py  test_dsl_to_array.py  test_fusion.py  test_linalg_to_npu.py  test_npu_canonicalize.py  test_tile.py
